--- a/exercicio1.html
+++ b/exercicio1.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/estilos.css">
+    <link rel="stylesheet" href="src/styles/estilos.css">
     <title>EXERCICIO 1</title>
 </head>
 <body>
     <div id="header">
-                <a href="index.html"><img src="img/arrow-back.png" alt="seta para voltar"/></a>
+        <a href="index.html"><img src="src/img/arrow-back.png" alt="seta para voltar"/></a>
         <h1>Exercicio1</h1>
+    </div>
+
+    <div class="leituraDados">
+        <div class="campo">
+            <label for="numero">digite um número:</label>
+            <input placeholder="Digite um numero" type="text" name="numero" id="numero">
+        </div>
+            <button onclick="sequenciaFibonacci()">Mostrar sequencia</button>
+    </div>
+        <div id="mensagem"></div>
+
+        <script src="src/js/exercicio1.js"></script>
+
+
+    <div id="conteudo">
+
+        
+
     </div>
     
 </body>
