--- a/exercicio4.html
+++ b/exercicio4.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/estilos.css">
+    <link rel="stylesheet" href="src/styles/estilos.css">
+    <script
+        src="http://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <title>EXERCICIO 4</title>
 </head>
 <body>
     <div id="header">
-                <a href="index.html"><img src="img/arrow-back.png" alt="seta para voltar"/></a>
+        <a href="index.html"><img src="src/img/arrow-back.png" alt="seta para voltar"/></a>
         <h1>Exercicio4</h1>
+    </div>
+
+    <div class="leituraDados">
+        <div class="campo">
+            <label for="peso">digite o peso:</label>
+            <input placeholder="Ex 80.55" type="text" name="peso" id="peso">
+            <label for="altura">digite a altura:</label>
+            <input placeholder="Ex 1.70" type="text" name="altura" id="altura">
+        </div>
+            <button onclick="IMC()">Mostrar IMC</button>
+    </div>
+        <div id="mensagem"></div>
+
+        <script src="src/js/exercicio4.js"></script>
+
+
+    <div id="conteudo">
+
+        
+
     </div>
     
 </body>
