--- a/exercicio5.html
+++ b/exercicio5.html
@@ -13,20 +13,20 @@
         <h1>Exercicio5</h1>
     </div>
 
-    <div class="leituraDados">
-        <div class="campo">
-            <label for="numero">digite uma equação:</label>
-            <input placeholder="Digite um numero" type="text" name="numero" id="numero">
-        </div>
-            <button onclick="Calcular()">Calcular</button>
-    </div>
-        <div id="mensagem"></div>
+   
 
         <script src="src/js/exercicio5.js"></script>
 
 
     <div id="conteudo">
-
+        <div class="leituraDados">
+            <div class="campo">
+                <label for="numero">digite uma equação:</label>
+                <input placeholder="Digite uma equação" type="text" name="numero" id="numero">
+            </div>
+                <button onclick="Calcular()">Calcular</button>
+        </div>
+            <div id="mensagem"></div>
         
 
     </div>
